[tool.poetry]
name = "project-millstone"
version = "0.1.0"
description = "Simple MTG Booster Pack generator"
authors = ["wookiee89 <jay.r.jain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
aiohttp = "^3.8.5"
diskcache = "^5.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
